<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ManualSearchActivity" >

    <TextView
        android:id="@+id/search_manual_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="false"
        android:textSize="25sp"
        android:text="@string/post_manual_header_text" />
    
     <EditText
	    android:id="@+id/search_manual_booktitle"
	    android:layout_height="wrap_content"
	    android:hint="@string/post_manual_booktitle_hint"
	    android:inputType="textCapSentences"
	    android:layout_width="fill_parent"
	    android:layout_below="@id/search_manual_header"/>
     
      <EditText
	    android:id="@+id/search_manual_bookauthor"
	    android:layout_height="wrap_content"
	    android:hint="@string/post_manual_bookauthor_hint"
	    android:inputType="textCapSentences"
	    android:layout_width="fill_parent"
	    android:layout_below="@id/search_manual_booktitle"/>
      
       <EditText
	    android:id="@+id/search_manual_bookisbn"
	    android:layout_height="wrap_content"
	    android:hint="@string/post_manual_bookisbn_hint"
	    android:inputType="number"
	    android:digits="0123456789-"
	    android:layout_width="fill_parent"
	    android:layout_below="@id/search_manual_bookauthor"/>
       
       <Button
        android:id="@+id/post_manual_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/submit"
        android:onClick="submitResults"
        android:layout_below="@id/search_manual_bookisbn"  />

</RelativeLayout>
